--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-app1cli 
+app1cli (1.0.28) stable; ugency=medium
+
+* Enable "parse arguments" feature (only for Pascal edition, with basic maths)
+* Allow the user to use Vietnames or English language (for Pascal only)
+* New menu layout (for C# only)
+* Resolved maths problem for C# edition
+
 app1cli (1.0.28-dev) unstable; ugency=medium
 
 * A Developer release of app1cli
