--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ C#: Enable some args for the program
 C#-utilsLib: Make functions for warnings and errors, like Pascal too
 C#-utilsLib: Replace some strings in ask_2nums() and ask_3nums()
 C#: (Working) Make a math library
-Pascal: Improve args code
+Pascal: Improve args code (Nothing to do)
 Pascal: Set color to white for FULL program, or change the changed color to LightGray (default) (Done!)
-Pascal: Set the menu layout like C#
-All: Add license to help message (C#:Done!)
+Pascal: Set the menu layout like C# (Done!)
+All: Add license to help message
