--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
 // 1.0.29
 C#: Text color for the texts (Failed)
-C#: Use case/if block like Pascal (Started working)
-C#: Help message (Started working)
-C#: Fix program's path showing (Done!)
-C#: Enable some args for the program (If I can)
-C#-utilsLib: Make functions for warnings and errors, like Pascal too
+C#: Use case/if block like Pascal (Done!)
+C#: Help message (Canceled)
+C#: Fix program's path showing (Done! - but have problem in About?!)
+C#: Enable some args for the program (Canceled)
+C#-utilsLib: Make functions for warnings and errors, like Pascal too (Canceled - not needed)
 C#-utilsLib: Replace some strings in ask_2nums() and ask_3nums() (Failed)
 C#: (Working - Failed!) Make a math library
 Pascal: Improve args code (Nothing to do)
