--- a/TODO
+++ b/TODO
@@ -11,3 +11,9 @@ Pascal: Improve args code (Nothing to do)
 Pascal: Set color to white for FULL program, or change the changed color to LightGray (default) (Done!)
 Pascal: Set the menu layout like C# (Done!)
 All: Add license to help message (Done!)
+
+// 1.3
+Gettext support (almost done)
+* Translate About section (except GPL notes)
+Fix go to the main menu while choosing 'yes' (exit_program) (Done)
+Improve parements parsing (if needed)
