--- a/TODO
+++ b/TODO
@@ -14,6 +14,6 @@ All: Add license to help message (Done!)
 
 // 1.3
 Gettext support (almost done)
-* Translate About section (except GPL notes)
+Translate About section (except GPL notes) (Done)
 Fix go to the main menu while choosing 'yes' (exit_program) (Done)
 Improve parements parsing (if needed)
