--- a/TODO
+++ b/TODO
@@ -21,3 +21,4 @@ Improve parements parsing (Done!)
 
 // 1.4
 Whetever to make to user choose their own language within the app?
+Rewrite the application?
